[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://addons/shipthis/wizards/android/steps/Step5InitialBuild.gd" id="1_step"]
[ext_resource type="PackedScene" path="res://addons/shipthis/components/ShipRunner.tscn" id="2_ship_runner"]

[node name="Step5InitialBuild" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_step")

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Loading..."

[node name="GradleContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="GradleNotice" type="RichTextLabel" parent="GradleContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Spacer1" type="Control" parent="GradleContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="EnableGradleButton" type="Button" parent="GradleContainer"]
layout_mode = 2
text = "Enable Gradle Build"

[node name="ShipContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ShipRunner" parent="ShipContainer" instance=ExtResource("2_ship_runner")]
layout_mode = 2
size_flags_vertical = 3

[node name="ErrorContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="ErrorContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="ErrorContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="RetryButton" type="Button" parent="ErrorContainer"]
layout_mode = 2
text = "Retry"
